force-app/main/default/objects/ProfileId__c/ProfileId__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Profile Id</label>
</CustomObject>