force-app/main/default/objects/ProfileId__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <label>Admin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>