force-app/main/default/objects/ProfileId__c/fields/Admin_API__c.field-meta.xml
<CustomField>
    <fullName>Admin_API__c</fullName>
    <label>Admin API</label>
    <length>18</length>
    <type>Text</type>
</CustomField>