force-app/main/default/objects/ProfileId__c/fields/Customer_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_User__c</fullName>
    <label>Customer Community User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>