force-app/main/default/objects/ProfileId__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <label>Operations</label>
    <length>18</length>
    <type>Text</type>
</CustomField>