force-app/main/default/objects/ProfileId__c/fields/Seller_Support_Agent__c.field-meta.xml
<CustomField>
    <fullName>Seller_Support_Agent__c</fullName>
    <label>Seller Support Agent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>